--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>KAI獨家AI百家輔助工具</title>
+    <title>R.Z.U-AI預測程式</title>
     <!-- 加載自訂字體 -->
     <link href="https://cdn.jsdelivr.net/gh/zheyujiang2003/GDF@main/Custom.ttf" rel="stylesheet">
     <style>
