--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 <body>
 
 <div class="container">
-    <h1>KAI獨創百家輔助工具</h1>
+    <h1>R.Z.U-AI預測程式</h1>
     <label for="playerCards">閒家牌（例如：18 或 12X）：</label>
     <input type="text" id="playerCards" placeholder="輸入閒家點數" maxlength="3"><br>
 
